--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.69.5",
     "react-native-image-picker": "^4.10.0",
     "react-native-text-recognition": "^1.0.0",
+    "react-native-ui-action-sheet": "^1.0.3",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
