--- a/app.json
+++ b/app.json
@@ -1,11 +1,4 @@
 {
-  "expo": {
-    "name": "ocrTest",
-    "slug": "ocrTest",
-    "version": "1.0.0",
-    "assetBundlePatterns": [
-      "**/*"
-    ]
-  },
-  "name": "ocrTest"
+  "name": "TextRecognition",
+  "displayName": "TextRecognition"
 }
