--- a/package.json
+++ b/package.json
@@ -1,37 +1,57 @@
 {
-  "name": "ocrtest",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "TextRecognition",
+  "version": "0.0.1",
+  "private": true,
   "scripts": {
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web"
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@react-native-camera-roll/camera-roll": "^5.0.4",
-    "@react-native-masked-view/masked-view": "^0.2.8",
-    "@react-navigation/stack": "^6.3.3",
-    "expo": "~46.0.9",
-    "expo-splash-screen": "~0.16.2",
-    "expo-status-bar": "~1.4.0",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.69.5",
+    "@react-native-camera-roll/camera-roll": "^5.1.0",
+    "@react-native-ml-kit/text-recognition": "^1.2.1",
+    "@react-navigation/drawer": "^6.5.3",
+    "@react-navigation/native": "^6.0.16",
+    "react": "18.1.0",
+    "react-native": "0.70.6",
     "react-native-color-matrix-image-filters": "^6.0.1",
     "react-native-gesture-handler": "^2.8.0",
-    "react-native-image-picker": "^4.10.0",
-    "react-native-paper": "^4.12.5",
+    "react-native-image-picker": "^4.10.1",
+    "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
-    "react-native-text-recognition": "^1.0.0",
     "react-native-ui-action-sheet": "^1.0.3",
-    "react-native-vector-icons": "^9.2.0",
-    "react-native-view-shot": "^3.5.0",
-    "react-native-web": "~0.18.7"
+    "react-native-view-shot": "^3.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "@tsconfig/react-native": "^2.0.2",
+    "@types/jest": "^26.0.23",
+    "@types/react": "^18.0.21",
+    "@types/react-native": "^0.70.6",
+    "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
+    "babel-jest": "^26.6.3",
+    "eslint": "^7.32.0",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "0.72.3",
+    "react-test-renderer": "18.1.0",
+    "typescript": "^4.8.3"
   },
-  "private": true
+  "jest": {
+    "preset": "react-native",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
+  }
 }
