integrated Google Cloud Vision API. The application can call Google Cloud Vision API and run the OCR.

--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "TextRecognition",
-  "displayName": "TextRecognition"
+  "name": "TextDetection",
+  "displayName": "TextDetection"
 }
