--- a/ios/TextDetection.xcodeproj/xcshareddata/xcschemes/TextDetection.xcscheme
+++ b/ios/TextDetection.xcodeproj/xcshareddata/xcschemes/TextDetection.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "TextRecognition.app"
-               BlueprintName = "TextRecognition"
-               ReferencedContainer = "container:TextRecognition.xcodeproj">
+               BuildableName = "TextDetection.app"
+               BlueprintName = "TextDetection"
+               ReferencedContainer = "container:TextDetection.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "TextRecognitionTests.xctest"
-               BlueprintName = "TextRecognitionTests"
-               ReferencedContainer = "container:TextRecognition.xcodeproj">
+               BuildableName = "TextDetectionTests.xctest"
+               BlueprintName = "TextDetectionTests"
+               ReferencedContainer = "container:TextDetection.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "TextRecognition.app"
-            BlueprintName = "TextRecognition"
-            ReferencedContainer = "container:TextRecognition.xcodeproj">
+            BuildableName = "TextDetection.app"
+            BlueprintName = "TextDetection"
+            ReferencedContainer = "container:TextDetection.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "TextRecognition.app"
-            BlueprintName = "TextRecognition"
-            ReferencedContainer = "container:TextRecognition.xcodeproj">
+            BuildableName = "TextDetection.app"
+            BlueprintName = "TextDetection"
+            ReferencedContainer = "container:TextDetection.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
