--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TextRecognition",
+  "name": "TextDetection",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,20 +10,10 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@react-native-camera-roll/camera-roll": "^5.1.0",
-    "@react-native-ml-kit/text-recognition": "^1.2.1",
-    "@react-navigation/drawer": "^6.5.3",
-    "@react-navigation/native": "^6.0.16",
     "react": "18.1.0",
     "react-native": "0.70.6",
-    "react-native-color-matrix-image-filters": "^6.0.1",
-    "react-native-gesture-handler": "^2.8.0",
-    "react-native-image-picker": "^4.10.1",
-    "react-native-reanimated": "^2.13.0",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2",
-    "react-native-ui-action-sheet": "^1.0.3",
-    "react-native-view-shot": "^3.5.0"
+    "react-native-image-picker": "^4.10.2",
+    "react-native-ui-action-sheet": "^1.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
